util_script: Make REDIRECT_URL a complete URL (where set). PR 57785

Submitted by: niq
Reviewed by: jim, minfrin


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1705496 13f79535-47bb-0310-9956-ffa450edef68